cmake_minimum_required(VERSION 3.22)
project(the_tour CXX)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(./hello_world)
add_subdirectory(./vector)
add_subdirectory(./raii)
add_subdirectory(./pointer)
add_subdirectory(./oop)
add_subdirectory(./array)
add_subdirectory(./concept)
add_subdirectory(./filesystem)
add_subdirectory(./random)
